--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Neighborhud</title>
+    <title>NeighborHUD</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
   </head>
-
   <body>
-    <%= render 'shared/navbar' %>
     <%= render 'shared/flashes' %>
-
+    <!-- ---------------------------  Map ---------------------------------- -->
+    <div
+      id="mapbox"
+      data-controller="mapbox"
+      data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"
+      style="width: 100vw; height: 100vh;">
+    </div>
+    <!-- ---------------------------  Map ---------------------------------- -->
     <%= yield %>
   </body>
 </html>
