--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,10 @@
     <!-- ---------------------------  Map ---------------------------------- -->
     <div
       id="mapbox"
+      class="mapbox"
       data-controller="mapbox"
       data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"
-      style="width: 100vw; height: 100vh;">
+      >
     </div>
     <!-- ---------------------------  Map ---------------------------------- -->
     <%= yield %>
