--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,7 @@
 /* --------------------------------- Config --------------------------------- */
 @import "config/variables";
 @import "config/reset";
+@import "config/mixins";
 
 /* ---------------------------------- Pages --------------------------------- */
 @import "pages/index";
@@ -27,4 +28,7 @@
 @import "components/button";
 @import "components/card";
 @import "components/search_bar";
-@import "components/map"
+@import "components/map";
+
+/* ---------------------------- Pages components ---------------------------- */
+@import "pages/home/top_container";
