changed primary color

--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -1,7 +1,7 @@
 /* -------------------------------------------------------------------------- */
 /*                                Solid Colors                                */
 /* -------------------------------------------------------------------------- */
-$primary: #0575E6;
+$primary: #238BEB;
 $secondary: #8D67FF;
 $success: #1edd48;
 $danger: #D32525;
