--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -1,8 +1,29 @@
 .mapbox {
-  height: 100vh;
   width: 100vw;
+  height: 100vh;
+  position: absolute;
+  top:0;
+  left:0;
+  z-index: -1;
 
-  .mapboxgl-ctrl-geocoder--input {
+  &gl-ctrl-top-right {
+    top: 2.5rem;
+    width: 90%;
+    left: 50%;
+    transform: translateX(-50%);
+    border-radius: 10px;
+    overflow: hidden;
+  }
+
+  .mapboxgl-ctrl.mapboxgl-ctrl-geocoder {
+    margin: 0;
+  }
+
+  .mapboxgl-ctrl-geocoder--icon {
+    z-index: 1;
+  }
+
+  &gl-ctrl-geocoder--input {
     background: $dark;
     color: $light;
     border: none;
@@ -10,6 +31,7 @@
 
     &::placeholder {
       font-style: italic;
+      font-weight: 400;
     }
   }
 }
