--- a/app/views/components/home/_top_buttons.html.erb
+++ b/app/views/components/home/_top_buttons.html.erb
@@ -1,5 +1,11 @@
-<div class="top_container__buttons-container">
-  <a class="btn top_container__button active" href="">All</a>
-  <a class="btn top_container__button" href="">Crime News</a>
-  <a class="btn top_container__button" href="">User Reports</a>
+<div class="top_container__buttons-container" data-controller="top-buttons">
+  <a class="btn top_container__button active" href="">
+    All
+  </a>
+  <a class="btn top_container__button" href="">
+    Crime News
+  </a>
+  <a class="btn top_container__button" href="">
+    User Reports
+  </a>
 </div>
