--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,5 +22,6 @@
     </div>
     <!-- ---------------------------  Map ---------------------------------- -->
     <%= yield %>
+    <%= render "shared/navbar" %>
   </body>
 </html>
