renamed top-buttons controller to active-link

--- a/app/views/components/home/_top_buttons.html.erb
+++ b/app/views/components/home/_top_buttons.html.erb
@@ -1,4 +1,4 @@
-<div class="top_container__buttons-container" data-controller="top-buttons">
+<div class="top_container__buttons-container" data-controller="active-link">
   <a class="btn top_container__button active" href="">
     All
   </a>
