added filter button

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,6 +29,7 @@
 @import "components/card";
 @import "components/search_bar";
 @import "components/map";
+@import "components/filter_button";
 
 /* ---------------------------- Pages components ---------------------------- */
 @import "pages/home/top_container";
