--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -37,8 +37,7 @@ $large-desktop: 1920px;
 /* -------------------------------------------------------------------------- */
 /*                                 Transition                                 */
 /* -------------------------------------------------------------------------- */
-$transition-duration: 0.3s;
-$transition-timing: ease-in-out;
+$transition: all 0.3s ease-in-out;
 
 /* -------------------------------------------------------------------------- */
 /*                                   Shadows                                  */
