--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,7 +29,8 @@
 @import "components/card";
 @import "components/search_bar";
 @import "components/map";
-@import "components/filter_button";
+@import "components/filter";
+@import "components/categories";
 
 /* ---------------------------- Pages components ---------------------------- */
 @import "pages/home/top_container";
