--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,6 @@
     <%= csp_meta_tag %>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
   </head>
   <body>
@@ -21,7 +20,9 @@
       >
     </div>
     <!-- ---------------------------  Map ---------------------------------- -->
-    <%= yield %>
+    <main class="main">
+      <%= yield %>
+    </main>
     <%= render "shared/navbar" %>
   </body>
 </html>
