--- a/app/views/components/_categories.html.erb
+++ b/app/views/components/_categories.html.erb
@@ -1,9 +1,3 @@
-<!-- TODO: Remove buttons and rename carousel -->
-<div class="categories" data-controller="carousel">
-  <!-- Categories Buttons -->
-  <%# <%= render "components/categories_buttons" %>
-  <!-- Categories Buttons -->
-  <!-- Carousel -->
-  <%= render "components/categories_carousel" %>
-  <!-- Carousel -->
+<div class="categories">
+  <%= render "components/categories_list" %>
 </div>
