--- a/app/views/components/_categories_list.html.erb
+++ b/app/views/components/_categories_list.html.erb
@@ -1,6 +1,5 @@
-<!-- TODO: Rename file and delete target/controller -->
 <!-- TODO: Change icon colors to primary -->
-  <div class="categories__list" data-carousel-target="carousel">
+  <div class="categories__list">
     <!-- Item Start -->
     <div class="categories__item">
       <%= image_tag("icons/home-invasion.svg") %>
@@ -76,5 +75,4 @@
       <p>Violence</p>
     </div>
     <!-- Item End -->
-
   </div>
