fixed search box font size

--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -30,6 +30,7 @@
     color: $light;
     border: none;
     outline: none;
+    font-size: 1rem;
 
     &::placeholder {
       font-style: italic;
