--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,13 +12,13 @@
   <body>
     <%= render 'shared/flashes' %>
     <!-- ---------------------------  Map ---------------------------------- -->
-    <div
+    <!-- <div
       id="mapbox"
       class="mapbox"
       data-controller="mapbox"
       data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"
       >
-    </div>
+    </div>-->
     <!-- ---------------------------  Map ---------------------------------- -->
     <main class="main">
       <%= yield %>
