--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -5,6 +5,9 @@
   <%= @incident.latitude %>
   <%= @incident.longitude %>
   <%= @incident.incident_date %>
+  <% @incident.category_list.each do |category| %>
+    <%= category %>
+  <% end %>
   <% if @incident.can_receive_comments? %>
     <%= render 'comments/form', incident: @incident, original_comment: @original_comment, comment: @comment %>
     <ul>
