added flatpickr styles

--- a/app/assets/stylesheets/components/_categories.scss
+++ b/app/assets/stylesheets/components/_categories.scss
@@ -15,7 +15,7 @@
     overflow: auto;
     align-items: center;
     grid-area: categories_list;
-    padding-block: 1rem;
+    padding-block: 1rem 0.5rem;
     transition: all 0.3s ease-in-out;
     -webkit-overflow-scrolling: touch;
     -ms-overflow-style: none;  /* IE and Edge */
