--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,6 +31,7 @@
 @import "components/map";
 @import "components/filter";
 @import "components/categories";
+@import "components/date_picker";
 
 /* ---------------------------- Pages components ---------------------------- */
 @import "pages/home/top_container";
