--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -1,3 +1,5 @@
-<% @incidents.each do |incident| %>
-  <%= link_to incident.title, incident_path(incident) %>
-<% end %>
+<ul>
+  <% @incidents.each do |incident| %>
+    <li><%= link_to incident.title, incident_path(incident) %></li>
+  <% end %>
+<ul>
