--- a/app/views/incidents/new.html.erb
+++ b/app/views/incidents/new.html.erb
@@ -1,11 +1,14 @@
-<%= simple_form_for @incident do |f| %>
-  <%= f.input :incident_date %>
-  <%= f.input :location,
+<div class="content">
+  <%= render "components/incident_report" %>
+  <%= simple_form_for @incident do |f| %>
+    <%= f.input :incident_date %>
+    <%= f.input :location,
               input_html: { data: { geocoder_target: "location" } },
               wrapper_html: { data: { controller: "geocoder", geocoder_api_key_value: ENV['MAPBOX_API_KEY'] } } %>
-  <%= f.input :title %>
-  <%= f.input :description %>
-  <%= f.input :can_receive_comments %>
-  <%= f.input :category_list, label: "Add categories", as: :check_boxes, collection: [ "Violence", "Theft", "Arson", "Drugs", "Harrasment/SA", "Disturbing the Peace" ] %>
-  <%= f.submit %>
-<% end %>
+    <%= f.input :title %>
+    <%= f.input :description %>
+    <%= f.input :can_receive_comments %>
+    <%= f.input :category_list, label: "Add categories", as: :check_boxes, collection: [ "Violence", "Theft", "Arson", "Drugs", "Harrasment/SA", "Disturbing the Peace" ] %>
+    <%= f.submit %>
+  <% end %>
+</div>
