--- a/app/views/components/_nav_links.html.erb
+++ b/app/views/components/_nav_links.html.erb
@@ -3,7 +3,10 @@
     <a class="nav__link" href=""><i class="fas fa-home"></i></a>
   </li>
   <li>
-    <a class="nav__link" href=""><i class="fas fa-newspaper"></i></a>
+    <div data-active-link-target="feedButton">
+    <a data-action="click->feed#showFeed" class="nav__link" href=""><i class="fas fa-newspaper"></i>
+    </div>
+    </a>
   </li>
   <li>
     <a class="nav__link" href=""><i class="fas fa-plus"></i></a>
