--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -1,8 +1,9 @@
-<%= render "components/home/top_container" %>
+<!--<%= render "components/home/top_container" %>-->
 <%= render "components/filter" %>
-
+<%= render "components/feed" %>
+<!--
 <ul>
   <% @incidents.each do |incident| %>
     <li><%= link_to incident.title, incident_path(incident) %></li>
   <% end %>
-<ul>
+<ul>-->
