--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,8 @@
     <!-- ---------------------------  Map ---------------------------------- -->
     <main class="main">
       <%= yield %>
+    <div data-controller="feed">
+    </div>
     </main>
     <%= render "shared/navbar" %>
   </body>
