--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,6 +32,7 @@
 @import "components/filter";
 @import "components/categories";
 @import "components/date_picker";
+@import "components/feed";
 
 /* ---------------------------- Pages components ---------------------------- */
 @import "pages/home/top_container";
