--- a/app/assets/stylesheets/pages/home/_top_container.scss
+++ b/app/assets/stylesheets/pages/home/_top_container.scss
@@ -2,6 +2,8 @@
   text-align: center;
   margin-top: 0.875rem;
   font-size: 0.875rem;
+  position: absolute;
+  top: 0;
 
   &__heading {
     font-size: inherit;
