--- a/app/views/components/_nav_links.html.erb
+++ b/app/views/components/_nav_links.html.erb
@@ -3,10 +3,7 @@
     <a class="nav__link" href=""><i class="fas fa-home"></i></a>
   </li>
   <li>
-    <div data-controller="feed">
-    <a data-feed-target="feedButton" data-action="click->feed#showFeed" class="nav__link" href=""><i class="fas fa-newspaper"></i>
-    </div>
-    </a>
+    <a class="nav__link" href=""><i class="fas fa-newspaper"></i></a>
   </li>
   <li>
     <a class="nav__link" href=""><i class="fas fa-plus"></i></a>
