--- a/app/assets/stylesheets/components/_feed.scss
+++ b/app/assets/stylesheets/components/_feed.scss
@@ -2,8 +2,9 @@
   transform: translatex(500px);
   transition: transform 2s;
 }
-div {
+
+#mainContainer {
   background-color: rgba(60,60,60,0.85);
   height: 100vh;
-  z-index: 3;
+  z-index: 1;
 }
