added a description field

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -12,6 +12,10 @@
     box-shadow: none;
   }
 
+  &.btn--report {
+    background-color: #238beb;
+  }
+
   // Font Awesome icons
   i {
     position: relative;
