--- a/app/views/incidents/new.html.erb
+++ b/app/views/incidents/new.html.erb
@@ -1,14 +1,14 @@
 <div class="content">
-  <%= render "components/incident_report" %>
   <%= simple_form_for @incident do |f| %>
+    <%= render "components/incident_report" %>
     <%# <%= f.input :location,
               input_html: { data: { geocoder_target: "location" } },
               wrapper_html: { data: { controller: "geocoder", geocoder_api_key_value: ENV['MAPBOX_API_KEY'] } } %>
-    <%= f.input :can_receive_comments %>
+    <%= f.input :can_receive_comments, label:"Comments On" %>
     <div>
-      <%= f.input :description %>
+      <%# <%= f.input :description, required: false %>
       <%# <%= f.input :category_list, label: "Add categories", as: :check_boxes, collection: [ "Violence", "Theft", "Arson", "Drugs", "Harrasment/SA", "Disturbing the Peace", "Traffic" ] %>
-      <%= render "components/report_details" %>
+      <%= render "components/report_details", f: f %>
       <%= f.button :submit, "Report", class: "btn btn--report" %>
     </div>
   <% end %>
