--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <%#= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
-    <%#= render 'shared/flashes' %>
+    <%= render 'shared/flashes' %>
     <!-- ---------------------------  Map ---------------------------------- -->
     <!-- <div
       id="mapbox"
