--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -13,3 +13,27 @@
     background: $dark;
   }
 }
+
+.card--incident-details {
+  background-color: #333333;
+  border-radius: 16px;
+  font-family: $roboto;
+
+  h1 {
+    color: rgb(247, 247, 247);
+    font-size: 17px;
+    font-family: $roboto;
+    font-weight: 400;
+  }
+
+  p {
+    font-size: 14px;
+    color: rgb(223, 223, 223);
+  }
+
+  .card--category {
+    font-size: 13px;
+    color: #8E9398;
+    font-family: $roboto;
+  }
+}
