--- a/app/views/components/_report_details.html.erb
+++ b/app/views/components/_report_details.html.erb
@@ -5,6 +5,7 @@
   </button>
   <div class="card__body" data-report-details-target="card">
     <div class="mt-3"></div>
-    <%= f.input :description, placeholder: "Write incident details here", label: false, input_html: { class: "m-2" }, required: false %>
+    color: #6d6d6d;
+    <%= f.input :description, placeholder: "Write incident details here", label: false, input_html: { :style=> "background: #383838; border: none;", class: "field" }, required: false %>
   </div>
 </div>
