added nav link placeholder

--- a/app/views/components/_nav_links.html.erb
+++ b/app/views/components/_nav_links.html.erb
@@ -1,17 +1,18 @@
+<!-- TODO: Replace href placeholders -->
 <ul class="nav__links" data-controller="active-link">
-  <li class="active">
-    <a class="nav__link" href=""><i class="fas fa-home"></i></a>
+  <li>
+    <a class="nav__link" href="/"><i class="fas fa-home"></i></a>
   </li>
   <li>
-    <a class="nav__link" href=""><i class="fas fa-newspaper"></i></a>
+    <a class="nav__link" href="/incidents"><i class="fas fa-newspaper"></i></a>
   </li>
   <li>
-    <a class="nav__link" href=""><i class="fas fa-plus"></i></a>
+    <a class="nav__link" href="/add"><i class="fas fa-plus"></i></a>
   </li>
   <li>
-    <a class="nav__link" href=""><i class="fas fa-map-marked-alt"></i></a>
+    <a class="nav__link" href="/routes"><i class="fas fa-map-marked-alt"></i></a>
   </li>
   <li>
-    <a class="nav__link" href=""><i class="fas fa-user-circle"></i></a>
+    <a class="nav__link" href="/user"><i class="fas fa-user-circle"></i></a>
   </li>
 </ul>
