--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
 <%= simple_form_for [incident, original_comment, comment] do |f| %>
-  <%= f.input :content, label: false %>
+  <%= f.input :content, label: false, placeholder: "Comment here"  %>
   <%= f.submit style: "display: none;"%>
 <% end %>
