--- a/app/views/components/_report_details.html.erb
+++ b/app/views/components/_report_details.html.erb
@@ -5,6 +5,10 @@
   </button>
   <div class="card__body" data-report-details-target="card">
     <div class="mt-3"></div>
-    <%= f.input :description, placeholder: "Write incident details here", label: false, input_html: { :style=> "background: #383838; border: none; color: #bcc4cd;"}, required: false %>
+    <%= f.input :description,
+                placeholder: "Write incident details here",
+                label: false,
+                input_html: { :style=> "background: #383838; border: none; color: #bcc4cd;"},
+                required: false %>
   </div>
 </div>
