added margin to the description card

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -4,6 +4,7 @@
   border-radius: 1rem;
   box-shadow: $box-shadow;
   overflow: hidden;
+  margin-bottom: 24px;
 
   &__body {
     padding: 1rem 1.5rem;
