--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container p-3">
+<div class="container ps-3 pe-3 pt-3">
   <div class="d-flex justify-content-start link--incident-details">
     <%= link_to "<p style='margin-bottom: 0; padding-bottom:0;'><i class='fas fa-chevron-left me-2'></i>Back</p>".html_safe, "#" %>
   </div>
@@ -71,15 +71,22 @@
 </div>
 
 <% @incident.comments.each do |comment| %>
-  <div class="card--comment ps-4 pe-4">
+  <div class="card--comment ps-1 pe-1 ms-4 me-4 mt-3">
     <div class="d-flex justify-content-between card--info">
-      <p style="margin: 0; padding: 0;"><%= comment.user.name %></p>
+      <p style="margin: 0; padding: 0;">
+        <strong><%= comment.user.name %></strong>
+      </p>
       <p style="margin: 0; padding: 0;"><%= comment.created_at.to_date %></p>
     </div>
-    <%= comment.content %>
-    <% if comment.comment.present? %>
-      <%= link_to "", incident_comment_path(@incident, comment), class: "link--incident-details" %>
-    <% end %>
+    <p style="margin: 0; padding: 0;"><%= comment.content %></p>
+    <div class="d-flex justify-content-end mb-1">
+      <p class="card--comment-comment"style="margin-bottom: 0; padding-bottom: 0;">
+        <i class="fas fa-comment me-1" style="font-size: 16px;"></i>
+        comments
+        (<%= comment.comments.count %>)
+      </p>
+    </div>
+    <%= link_to "", incident_comment_path(comment.incident, comment), class: "link--incident-details" %>
   </div>
 <% end %>
 
