reformatted comment cards

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -3,9 +3,12 @@
   bottom: 50px;
   width: 100%;
   background-color: #181818;
+  border: 0px;
+  padding-top: 16px;
 
   form {
     width: 90%;
+    border: 0px;
   }
 
   .form-control {
