changed the colour and width

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -13,7 +13,10 @@
   }
 
   &.btn--report {
-    background-color: #238beb;
+    color: #FBFBFB;
+    background-color: #1a75e6;
+    border-radius: 20px;
+    width: 80%;
   }
 
   // Font Awesome icons
