--- a/app/assets/stylesheets/components/_report_bar.scss
+++ b/app/assets/stylesheets/components/_report_bar.scss
@@ -2,6 +2,6 @@
   background: $dark-gradient;
   width: 100%;
   margin: 0;
-  padding: 8px 16px;
+  padding: 24px 16px 16px 8px;
   text-align: center;
-}
+  }
